wrapped up and fixed css on landing page

--- a/src/component/AutosuggestInput.css
+++ b/src/component/AutosuggestInput.css
@@ -1,7 +1,7 @@
 .react-autosuggest__container {
     display: flex;
     flex-direction: column;
-    width: calc(100% - 80px);
+    width: 100%;
     height: 100%;
     min-width: 320px;
     left: 0;
